# create-your-first-app-with-qt

./: CMakeLists.txt  README.md  ToDoDemo.qmlproject  ToDoDemo.qmlproject.qtds  qmlmodules  share.qrc
content/: App.qml  Screen01.qml
imports/: CMakeLists.txt
imports/ToDoDemo/: CMakeLists.txt  Constants.qml  DirectoryFontLoader.qml  EventListModel.qml  EventListSimulator.qml  qmldir
imports/ToDoDemo/designer/: plugin.metainfo
src/: import_qml_plugins.h
